--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "@ckeditor/ckeditor5-react": "^11.0.0",
     "bootstrap": "^5.3.8",
     "bootstrap-icons": "^1.13.1",
+    "exceljs": "^4.4.0",
+    "file-saver": "^2.0.5",
     "next": "15.5.2",
     "react": "19.1.0",
     "react-data-table-component": "^7.7.0",
@@ -21,7 +23,8 @@
     "react-hot-toast": "^2.6.0",
     "react-quill": "^2.0.0",
     "react-toastify": "^11.0.5",
-    "swiper": "^12.0.3"
+    "swiper": "^12.0.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
